--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url('bg.png');
+  background-image: url('bg2.png');
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
