--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,19 @@ body {
   background-size: cover;
   color: yellow;
 }
+
+h1 {
+  text-align: center;
+}
+
+h2 {
+  color: white;
+  letter-spacing: 8px;
+  text-align: center;
+}
+
+h4 {
+  font-size: 50px;
+  color: white;
+  text-align: center;
+}
