--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -14,5 +14,5 @@
   }
   gtag("js", new Date());
 
-  gtag("config", "{{ site.google_analytics }}");
+  gtag("config", "{{ site.google_analytics }}", { 'anonymize_ip': true });
 </script>
